--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
+    "quill": "^1.3.7",
     "vue": "^2.6.10",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "webpack-merge": "^4.2.2"
