--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^2.2.1",
     "quill": "^1.3.7",
     "vue": "^2.6.10",
+    "vue-meditor": "^2.1.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
